# polematrix

./: .gitignore  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Makefile  README.md  RadiationModel.cpp  RadiationModel.hpp  ResStrengths.cpp  ResStrengths.hpp  Simulation.cpp  Simulation.hpp  Tracking.cpp  Tracking.hpp  TrackingTask.cpp  TrackingTask.hpp  TrackingThread.cpp  TrackingThread.hpp  Trajectory.cpp  Trajectory.hpp  debug.cpp  debug.hpp  gitversion.cmake  main.cpp  test-radiation.cpp  version.hpp.in
doc/: Makefile  polem.bib  polem_defs.sty  polematrix.tex
